--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:native && tsc",
     "build:watch": "tsc --watch",
+    "build:native": "./scripts/build-native.sh",
+    "build:swift": "cd native && npm run build-swift",
     "dev": "ts-node src/cli.ts",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -62,7 +64,9 @@
     "readline": "^1.3.0"
   },
   "optionalDependencies": {
-    "fzf": "^0.5.0"
+    "fzf": "^0.5.0",
+    "node-addon-api": "^6.0.0",
+    "node-gyp": "^9.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
