feat: enhance Secure Enclave functionality and update dependencies
- Added support for retrieving public keys from private key data in the native Secure Enclave.
- Implemented encryption and decryption methods with improved error handling in Swift.
- Updated `config.json` to enable native Secure Enclave usage by default.
- Introduced new dependencies in `package.json` and `package-lock.json` for enhanced functionality.
- Enhanced `PasswordManager` and `AgeManager` to accommodate new Secure Enclave features and configurations.
- Updated TypeScript interfaces to support new Secure Enclave options.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "useAgeBinary": false,
+  "useNativeSecureEnclave": true,
   "seAccessControl": "any-biometry-or-passcode",
   "seAutoConfirm": false
 }
