--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "age-encryption": "^0.2.4",
+    "bech32": "^2.0.0",
     "commander": "^9.4.0",
     "keytar": "^7.9.0",
     "readline": "^1.3.0"
@@ -74,4 +75,4 @@
   "publishConfig": {
     "access": "public"
   }
-} 
+}
