feat: implement cryptographic interoperability tests and enhance backend functionality
- Introduced a new document summarizing fixes for `npm run test:interop` command, ensuring all tests pass.
- Added comprehensive tests for cross-backend interoperability among CLI, Pure JS, and Native Secure Enclave implementations.
- Standardized cryptographic format utilities for consistent encoding and decoding across all backends.
- Enhanced error handling and validation in backend implementations to improve robustness.
- Updated package dependencies to support new functionalities and ensure compatibility.
- Documented compatibility limitations and backend interactions in the new test suite.

--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "npm run build:native && tsc",
+    "build": "npm run build:native && tsc && cp -r native dist/",
     "build:watch": "tsc --watch",
     "build:native": "./scripts/build-native.sh",
     "build:swift": "cd native && npm run build-swift",
     "dev": "ts-node src/cli.ts",
     "test": "jest",
+    "test:interop": "mocha dist/test/crypto-interop.test.js",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.{js,ts}",
     "lint:fix": "eslint src/**/*.{js,ts} --fix",
@@ -47,17 +48,24 @@
   },
   "homepage": "https://github.com/tonidy/pak-lib#readme",
   "devDependencies": {
+    "@types/chai": "^5.2.2",
     "@types/jest": "^29.5.0",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "chai": "^5.2.1",
     "eslint": "^8.37.0",
     "jest": "^29.5.0",
+    "mocha": "^11.7.1",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@noble/ciphers": "^1.3.0",
+    "@noble/curves": "^1.9.2",
+    "@noble/hashes": "^1.8.0",
     "age-encryption": "^0.2.4",
     "bech32": "^2.0.0",
     "commander": "^9.4.0",
