feat: add manual backend selection with -b shorthand and js backend

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
+  "seBackend": "js",
   "useAgeBinary": false,
-  "useNativeSecureEnclave": true,
+  "useNativeSecureEnclave": false,
   "seAccessControl": "any-biometry-or-passcode",
-  "seAutoConfirm": false
+  "seAutoConfirm": true
 }
