Rename package from @kdbx/pak-lib to @kdbx/pak

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kdbx/pak-lib",
+  "name": "@kdbx/pak",
   "version": "0.3.6",
   "description": "PAK (Password Age Kit) - A simple, secure password manager in JavaScript using age encryption.",
   "main": "dist/src/index.js",
