refactor: unify command to 'pak' and add dev tooling
This commit introduces several significant improvements to the project's structure, tooling, and consistency.

The primary change is the unification of the command-line tool under a single name: `pak`. The `pa` alias has been removed from `package.json`, and all user-facing output in the CLI and documentation has been updated accordingly. This simplifies the tool's branding and usage.

To improve code quality and maintainability, the following development tools have been configured:
- ESLint is now set up for linting TypeScript code.
- Jest is introduced as the primary testing framework.

Additionally, a fix has been implemented to handle Secure Enclave identities (`age-plugin-se-`) in a case-insensitive manner, improving robustness.

BREAKING CHANGE: The 'pa' command alias has been removed. Use 'pak' for all operations.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "PAK (Password Age Kit) - A simple, secure password manager in JavaScript using age encryption.",
   "main": "dist/src/index.js",
   "bin": {
-    "pa": "dist/src/cli.js",
     "pak": "dist/src/cli.js"
   },
   "files": [
@@ -19,11 +18,11 @@
     "build:native": "./scripts/build-native.sh",
     "build:swift": "cd native && npm run build-swift",
     "dev": "ts-node src/cli.ts",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:interop": "mocha dist/test/crypto-interop.test.js",
     "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.{js,ts}",
-    "lint:fix": "eslint src/**/*.{js,ts} --fix",
+    "lint": "eslint \"src/**/*.{js,ts}\"",
+    "lint:fix": "eslint \"src/**/*.{js,ts}\" --fix",
     "typecheck": "tsc --noEmit",
     "prepare": "npm run build",
     "postinstall": "node scripts/postinstall.js"
