build(release): inject version info into build artifacts
Introduces a new build script, `scripts/set-version.js`, that runs after TypeScript compilation. This script replaces placeholder values in the compiled output with the current package version, git commit hash, and release date. This makes version information programmatically accessible within the application.

Additionally, this commit cleans up related code:
- Removes all remaining references to the deprecated 'js' backend from the CLI, types, and validation logic.
- Fixes path resolution in `getGitInfo` to correctly find the project's git repository.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kdbx/pak",
-  "version": "0.3.14",
+  "version": "0.3.15",
   "description": "PAK (Password Age Kit) - A simple, secure password manager in JavaScript using age encryption.",
   "main": "dist/src/index.js",
   "bin": {
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "npm run clean && npm run build:native && tsc && rm -rf dist/native && cp -r native dist/",
+    "build": "npm run clean && npm run build:native && tsc && node scripts/set-version.js && rm -rf dist/native && cp -r native dist/",
     "build:watch": "tsc --watch",
     "build:native": "./scripts/build-native.sh",
     "build:swift": "cd native && npm run build-swift",
