--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["ES2020", "DOM"],
     "declaration": true,
     "declarationMap": true,
-    "outDir": "./dist",
+    "outDir": "./dist/src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -26,8 +26,7 @@
     "exactOptionalPropertyTypes": true
   },
   "include": [
-    "src/**/*",
-    "test/**/*"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
